--- a/account.html
+++ b/account.html
@@ -12,7 +12,7 @@
         <div class="main__logo">
           <a href="index.html"><img src="assets/logo/logo.png" alt="logo" /></a>
         </div>
-        <div class="main__links">
+        <div id="navbar1"class="main__links">
           <ul class="">
             <li><a href="index.html">Календарь</a></li>
             <li><a href="tickets.html">Билеты</a></li>
