--- a/archive.html
+++ b/archive.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="static/css/style.css" />
     <title>Event Today</title>
   </head>
   <body>
     <header>
       <section class="main">
         <div class="main__logo">
-          <a href="index.html"><img src="assets/logo/logo.png" alt="logo" /></a>
+          <a href="index.html"><img src="static/assets/logo/logo.png" alt="logo" /></a>
         </div>
         <div class="main__links">
           <ul class="">
@@ -24,7 +24,7 @@
         <div class="main__reg">
           <button id="myBtn">Регистрация</button>
           <a href="registration.html"
-            ><img src="assets/icons/Vector.png" alt="pic"
+            ><img src="static/assets/icons/Vector.png" alt="pic"
           /></a>
         </div>
 
@@ -113,7 +113,7 @@
             <div class="mob-title">ЦИФРА МЕД</div>
             <div class="select-dropdown select-dropdown1">
               <span
-                ><img src="assets/icons/selector-archive.png" alt="icon"
+                ><img src="static/assets/icons/selector-archive.png" alt="icon"
               /></span>
               <div
                 id="selectDropdown1"
@@ -139,7 +139,7 @@
           <div class="archive__2023-container">
             <div class="archive__2023-container-1">
               <div class="archive__2023-container-1-img">
-                <img src="assets/other/archive1.jpg" alt="archive" />
+                <img src="static/assets/other/archive1.jpg" alt="archive" />
               </div>
               <div class="archive__2023-container-1-text">
                 <p>Цифровая медицина 23</p>
@@ -177,7 +177,7 @@
             <div class="mob-title">АКТИВЫ</div>
             <div class="select-dropdown select-dropdown2">
               <span
-                ><img src="assets/icons/selector-archive.png" alt="icon"
+                ><img src="static/assets/icons/selector-archive.png" alt="icon"
               /></span>
               <div
                 id="selectDropdown2"
@@ -200,7 +200,7 @@
           <div class="archive__2022-container">
             <div class="archive__2022-container-1">
               <div class="archive__2022-container-1-img">
-                <img src="assets/other/archive2.jpg" alt="archive" />
+                <img src="static/assets/other/archive2.jpg" alt="archive" />
               </div>
               <div class="archive__2022-container-1-text">
                 <p>Практика управления проблемными и непрофильными активами</p>
@@ -233,7 +233,7 @@
             <div class="mob-title">ЦИФРОВИЗАЦИЯ ТРАНСПОРТА</div>
             <div class="select-dropdown select-dropdown3">
               <span
-                ><img src="assets/icons/selector-archive.png" alt="icon"
+                ><img src="static/assets/icons/selector-archive.png" alt="icon"
               /></span>
               <div
                 id="selectDropdown3"
@@ -251,7 +251,7 @@
           <div class="archive__2021-container">
             <div class="archive__2021-container-1">
               <div class="archive__2021-container-1-img">
-                <img src="assets/other/archive3.jpg" alt="archive" />
+                <img src="static/assets/other/archive3.jpg" alt="archive" />
               </div>
               <div class="archive__2021-container-1-text">
                 <p>
@@ -283,7 +283,7 @@
             <div class="mob-title">СУБСИДИРОВАННАЯ ОТВЕТСТВЕННОСТЬ</div>
             <div class="select-dropdown select-dropdown4">
               <span
-                ><img src="assets/icons/selector-archive.png" alt="icon"
+                ><img src="static/assets/icons/selector-archive.png" alt="icon"
               /></span>
               <div
                 id="selectDropdown4"
@@ -301,7 +301,7 @@
           <div class="archive__2020-container">
             <div class="archive__2020-container-1">
               <div class="archive__2020-container-1-img">
-                <img src="assets/other/archive4.jpg" alt="archive" />
+                <img src="static/assets/other/archive4.jpg" alt="archive" />
               </div>
               <div class="archive__2020-container-1-text">
                 <p>
@@ -324,7 +324,7 @@
     <footer>
       <div class="footer__container">
         <div class="footer__container-1">
-          <div><img src="assets/logo/logo.png" alt="logo" /></div>
+          <div><img src="static/assets/logo/logo.png" alt="logo" /></div>
           <div>
             <div>
               Профессиональная <br />организация конференций<br />
@@ -333,12 +333,12 @@
             <div>Социальные сети</div>
             <div>
               <a href="#"
-                ><img src="assets/icons/youtube.png" alt="youtube"
+                ><img src="static/assets/icons/youtube.png" alt="youtube"
               /></a>
               <a href="#"
-                ><img src="assets/icons/telegram.png" alt="telegram"
+                ><img src="static/assets/icons/telegram.png" alt="telegram"
               /></a>
-              <a href="#"><img src="assets/icons/dzen.png" alt="yadzen" /></a>
+              <a href="#"><img src="static/assets/icons/dzen.png" alt="yadzen" /></a>
             </div>
             <div>Реквизиты компании</div>
             <div>ИП Лючина Татьяна Изосимовна</div>
@@ -400,6 +400,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/archive.js"></script>
+    <script src="static/js/archive.js"></script>
   </body>
 </html>
