--- a/registration.html
+++ b/registration.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="static/css/style.css" />
     <title>Event Today</title>
   </head>
 
@@ -11,7 +11,7 @@
     <header>
       <section class="main">
         <div class="main__logo">
-          <a href="index.html"><img src="assets/logo/logo.png" alt="logo" /></a>
+          <a href="index.html"><img src="static/assets/logo/logo.png" alt="logo" /></a>
         </div>
         <div id="navbar" class="main__links">
           <ul class="">
@@ -25,7 +25,7 @@
         <div class="main__reg">
           <button id="myBtn">Регистрация</button>
           <a href="registration.html" 
-            ><img src="assets/icons/Vector.png" alt="pic"
+            ><img src="static/assets/icons/Vector.png" alt="pic"
           /></a>
         </div>
 
@@ -149,7 +149,7 @@
     <footer>
       <div class="footer__container">
         <div class="footer__container-1">
-          <div><img src="assets/logo/logo.png" alt="logo" /></div>
+          <div><img src="static/assets/logo/logo.png" alt="logo" /></div>
           <div>
             <div>
               Профессиональная <br />организация конференций<br />
@@ -158,12 +158,12 @@
             <div>Социальные сети</div>
             <div>
               <a href="#"
-                ><img src="assets/icons/youtube.png" alt="youtube"
+                ><img src="static/assets/icons/youtube.png" alt="youtube"
               /></a>
               <a href="#"
-                ><img src="assets/icons/telegram.png" alt="telegram"
+                ><img src="static/assets/icons/telegram.png" alt="telegram"
               /></a>
-              <a href="#"><img src="assets/icons/dzen.png" alt="yadzen" /></a>
+              <a href="#"><img src="static/assets/icons/dzen.png" alt="yadzen" /></a>
             </div>
             <div>Реквизиты компании</div>
             <div>ИП Лючина Татьяна Изосимовна</div>
@@ -225,6 +225,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/reg.js"></script>
+    <script src="static/js/reg.js"></script>
   </body>
 </html>
