--- a/account.html
+++ b/account.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="static/css/style.css" />
     <title>Event Today</title>
   </head>
   <body>
     <header>
       <section class="main">
         <div class="main__logo">
-          <a href="index.html"><img src="assets/logo/logo.png" alt="logo" /></a>
+          <a href="index.html"><img src="static/assets/logo/logo.png" alt="logo" /></a>
         </div>
         <div id="navbar1"class="main__links">
           <ul class="">
@@ -23,7 +23,7 @@
         </div>
         <div class="main__reg">
           <a href="registration.html"
-            ><img src="assets/icons/Vector.png" alt="pic"
+            ><img src="static/assets/icons/Vector.png" alt="pic"
           /></a>
         </div>
 
@@ -96,7 +96,7 @@
               </h4>
             </div>
             <div class="profile__title-person-avatar">
-              <img src="assets/icons/account.png" alt="icon" />
+              <img src="static/assets/icons/account.png" alt="icon" />
             </div>
           </div>
         </div>
@@ -104,15 +104,15 @@
         <div class="profile__options">
           <div class="profile__options-choice">
             <div>
-              <img src="assets/icons/account3.png" alt="icon" />
+              <img src="static/assets/icons/account3.png" alt="icon" />
               <button class="profile-ticket">Мой билет</button>
             </div>
             <div>
-              <img src="assets/icons/account1.png" alt="icon" />
+              <img src="static/assets/icons/account1.png" alt="icon" />
               <button class="profile-event">Мои мероприятия</button>
             </div>
             <div>
-              <img src="assets/icons/account2.png" alt="icon" />
+              <img src="static/assets/icons/account2.png" alt="icon" />
               <button class="profile-FAQ">Вопросы и ответы</button>
             </div>
           </div>
@@ -139,7 +139,7 @@
           <div class="profile__options-event">
             <div class="profile__options-event-item">
               <div>
-                <img src="assets/other/date4.jpg" alt="other" />
+                <img src="static/assets/other/date4.jpg" alt="other" />
               </div>
               <div class="profile__options-event-item-container">
                 <div class="profile__options-event-item-container-title">
@@ -162,7 +162,7 @@
             </div>
             <div class="profile__options-event-item">
               <div>
-                <img src="assets/other/date4.jpg" alt="other" />
+                <img src="static/assets/other/date4.jpg" alt="other" />
               </div>
               <div class="profile__options-event-item-container">
                 <div class="profile__options-event-item-container-title">
@@ -184,7 +184,7 @@
             </div>
             <div class="profile__options-event-item">
               <div>
-                <img src="assets/other/date4.jpg" alt="other" />
+                <img src="static/assets/other/date4.jpg" alt="other" />
               </div>
               <div class="profile__options-event-item-container">
                 <div class="profile__options-event-item-container-title">
@@ -206,7 +206,7 @@
             </div>
             <div class="profile__options-event-item">
               <div>
-                <img src="assets/other/date4.jpg" alt="other" />
+                <img src="static/assets/other/date4.jpg" alt="other" />
               </div>
               <div class="profile__options-event-item-container">
                 <div class="profile__options-event-item-container-title">
@@ -228,7 +228,7 @@
             </div>
             <div class="profile__options-event-item">
               <div>
-                <img src="assets/other/date4.jpg" alt="other" />
+                <img src="static/assets/other/date4.jpg" alt="other" />
               </div>
               <div class="profile__options-event-item-container">
                 <div class="profile__options-event-item-container-title">
@@ -300,7 +300,7 @@
     <footer>
       <div class="footer__container">
         <div class="footer__container-1">
-          <div><img src="assets/logo/logo.png" alt="logo" /></div>
+          <div><img src="static/assets/logo/logo.png" alt="logo" /></div>
           <div>
             <div>
               Профессиональная <br />организация конференций<br />
@@ -309,12 +309,12 @@
             <div>Социальные сети</div>
             <div>
               <a href="#"
-                ><img src="assets/icons/youtube.png" alt="youtube"
+                ><img src="static/assets/icons/youtube.png" alt="youtube"
               /></a>
               <a href="#"
-                ><img src="assets/icons/telegram.png" alt="telegram"
+                ><img src="static/assets/icons/telegram.png" alt="telegram"
               /></a>
-              <a href="#"><img src="assets/icons/dzen.png" alt="yadzen" /></a>
+              <a href="#"><img src="static/assets/icons/dzen.png" alt="yadzen" /></a>
             </div>
             <div>Реквизиты компании</div>
             <div>ИП Лючина Татьяна Изосимовна</div>
@@ -376,6 +376,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/account.js"></script>
+    <script src="static/js/account.js"></script>
   </body>
 </html>
