--- a/company.html
+++ b/company.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="owl/owl.carousel.min.css" />
-    <link rel="stylesheet" href="owl/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="static/owl/owl.carousel.min.css" />
+    <link rel="stylesheet" href="static/owl/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="static/css/style.css" />
     <title>Event Today</title>
   </head>
   <body>
     <header>
       <section class="main">
         <div class="main__logo">
-          <a href="index.html"><img src="assets/logo/logo.png" alt="logo" /></a>
+          <a href="index.html"><img src="static/assets/logo/logo.png" alt="logo" /></a>
         </div>
         <div class="main__links">
           <ul class="">
@@ -26,7 +26,7 @@
         <div class="main__reg">
           <button id="myBtn">Регистрация</button>
           <a href="registration.html"
-            ><img src="assets/icons/Vector.png" alt="pic"
+            ><img src="static/assets/icons/Vector.png" alt="pic"
           /></a>
         </div>
 
@@ -145,11 +145,11 @@
           <h2>Предлагаемые форматы</h2>
         </div>
         <div class="company__formats-icons">
-          <img src="assets/icons/format1.png" alt="icon" />
-          <img src="assets/icons/format2.png" alt="icon" />
-          <img src="assets/icons/format3.png" alt="icon" />
-          <img src="assets/icons/format4.png" alt="icon" />
-          <img src="assets/icons/format5.png" alt="icon" />
+          <img src="static/assets/icons/format1.png" alt="icon" />
+          <img src="static/assets/icons/format2.png" alt="icon" />
+          <img src="static/assets/icons/format3.png" alt="icon" />
+          <img src="static/assets/icons/format4.png" alt="icon" />
+          <img src="static/assets/icons/format5.png" alt="icon" />
         </div>
       </section>
 
@@ -158,14 +158,14 @@
           <h2>Техническое оснащение</h2>
         </div>
         <div class="company__tech-container">
-          <img src="assets/icons/tech1.png" alt="icon" />
-          <img src="assets/icons/tech2.png" alt="icon" />
-          <img src="assets/icons/tech3.png" alt="icon" />
-          <img src="assets/icons/tech4.png" alt="icon" />
-          <img src="assets/icons/tech5.png" alt="icon" />
-          <img src="assets/icons/tech6.png" alt="icon" />
-          <img src="assets/icons/tech7.png" alt="icon" />
-          <img src="assets/icons/tech8.png" alt="icon" />
+          <img src="static/assets/icons/tech1.png" alt="icon" />
+          <img src="static/assets/icons/tech2.png" alt="icon" />
+          <img src="static/assets/icons/tech3.png" alt="icon" />
+          <img src="static/assets/icons/tech4.png" alt="icon" />
+          <img src="static/assets/icons/tech5.png" alt="icon" />
+          <img src="static/assets/icons/tech6.png" alt="icon" />
+          <img src="static/assets/icons/tech7.png" alt="icon" />
+          <img src="static/assets/icons/tech8.png" alt="icon" />
         </div>
       </section>
 
@@ -175,19 +175,19 @@
         </div>
         <div class="company__team-container">
           <div class="company__team-container-item">
-            <img src="assets/team/team6.png" alt="team" />
+            <img src="static/assets/team/team6.png" alt="team" />
             <h4>Екатерина Головченко</h4>
             <p>Программный директор</p>
           </div>
 
           <div class="company__team-container-item">
-            <img src="assets/team/team5.jpg" alt="team" />
+            <img src="static/assets/team/team5.jpg" alt="team" />
             <h4>Антон Помазан</h4>
             <p>Менеджер по работе с делегатами</p>
           </div>
 
           <div class="company__team-container-item">
-            <img src="assets/team/team1.jpg" alt="team" />
+            <img src="static/assets/team/team1.jpg" alt="team" />
             <h4>Юлия Андреева</h4>
             <p>
               Руководитель отдела коммуникаций Специалист по работе с Партнерами
@@ -195,31 +195,31 @@
           </div>
 
           <div class="company__team-container-item">
-            <img src="assets/team/team2.jpg" alt="team" />
+            <img src="static/assets/team/team2.jpg" alt="team" />
             <h4>Евгений Андреев</h4>
             <p>Ивент-менеджер</p>
           </div>
 
           <div class="company__team-container-item">
-            <img src="assets/team/team3.jpg" alt="team" />
+            <img src="static/assets/team/team3.jpg" alt="team" />
             <h4>Богдан Ратинский</h4>
             <p>Старший менеджер отдела коммуникаций</p>
           </div>
 
           <div class="company__team-container-item">
-            <img src="assets/team/team1.jpg" alt="team" />
+            <img src="static/assets/team/team1.jpg" alt="team" />
             <h4>Семен Несоленый</h4>
             <p>Менеджер по работе с делегатами</p>
           </div>
 
           <div class="company__team-container-item">
-            <img src="assets/team/team4.jpg" alt="team" />
+            <img src="static/assets/team/team4.jpg" alt="team" />
             <h4>Яна Ермолович</h4>
             <p>Контент-менеджер</p>
           </div>
 
           <div class="company__team-container-item">
-            <img src="assets/team/team1.jpg" alt="team" />
+            <img src="static/assets/team/team1.jpg" alt="team" />
             <h4>Светлана Барцева</h4>
             <p>
               Менеджер отдела коммуникаций <br />Специалист по работе с
@@ -228,26 +228,26 @@
           </div>
 
           <div class="company__team-container-item">
-            <img src="assets/team/team6.png" alt="team" />
+            <img src="static/assets/team/team6.png" alt="team" />
             <h4>Евгений Андреев</h4>
             <p>Ивент-менеджер</p>
           </div>
         </div>
         <div class="owl-carousel owl-theme" id="carouselTen">
           <div class="item">
-            <img src="assets/team/team6.png" alt="team" />
+            <img src="static/assets/team/team6.png" alt="team" />
             <h4>Екатерина Головченко</h4>
             <p>Программный директор</p>
           </div>
 
           <div class="item">
-            <img src="assets/team/team5.jpg" alt="team" />
+            <img src="static/assets/team/team5.jpg" alt="team" />
             <h4>Антон Помазан</h4>
             <p>Менеджер по работе с делегатами</p>
           </div>
 
           <div class="item">
-            <img src="assets/team/team1.jpg" alt="team" />
+            <img src="static/assets/team/team1.jpg" alt="team" />
             <h4>Юлия Андреева</h4>
             <p>
               Руководитель отдела коммуникаций Специалист по работе с Партнерами
@@ -255,31 +255,31 @@
           </div>
 
           <div class="item">
-            <img src="assets/team/team2.jpg" alt="team" />
+            <img src="static/assets/team/team2.jpg" alt="team" />
             <h4>Евгений Андреев</h4>
             <p>Ивент-менеджер</p>
           </div>
 
           <div class="item">
-            <img src="assets/team/team3.jpg" alt="team" />
+            <img src="static/assets/team/team3.jpg" alt="team" />
             <h4>Богдан Ратинский</h4>
             <p>Старший менеджер отдела коммуникаций</p>
           </div>
 
           <div class="item">
-            <img src="assets/team/team1.jpg" alt="team" />
+            <img src="static/assets/team/team1.jpg" alt="team" />
             <h4>Семен Несоленый</h4>
             <p>Менеджер по работе с делегатами</p>
           </div>
 
           <div class="item">
-            <img src="assets/team/team4.jpg" alt="team" />
+            <img src="static/assets/team/team4.jpg" alt="team" />
             <h4>Яна Ермолович</h4>
             <p>Контент-менеджер</p>
           </div>
 
           <div class="item">
-            <img src="assets/team/team1.jpg" alt="team" />
+            <img src="static/assets/team/team1.jpg" alt="team" />
             <h4>Светлана Барцева</h4>
             <p>
               Менеджер отдела коммуникаций <br />Специалист по работе с
@@ -288,7 +288,7 @@
           </div>
 
           <div class="item">
-            <img src="assets/team/team6.png" alt="team" />
+            <img src="static/assets/team/team6.png" alt="team" />
             <h4>Евгений Андреев</h4>
             <p>Ивент-менеджер</p>
           </div>
@@ -305,25 +305,25 @@
 
         <div class="owl-carousel carousel-theme" id="carouselSeven">
           <div class="item">
-            <img src="assets/other/swisshotel2.jpg" alt="swisshotel" />
+            <img src="static/assets/other/swisshotel2.jpg" alt="swisshotel" />
           </div>
           <div class="item">
-            <img src="assets/other/swisshotel1.jpg" alt="swisshotel" />
+            <img src="static/assets/other/swisshotel1.jpg" alt="swisshotel" />
           </div>
           <div class="item">
-            <img src="assets/other/swisshotel3.jpg" alt="swisshotel" />
+            <img src="static/assets/other/swisshotel3.jpg" alt="swisshotel" />
           </div>
           <div class="item">
-            <img src="assets/other/swisshotel4.jpg" alt="swisshotel" />
+            <img src="static/assets/other/swisshotel4.jpg" alt="swisshotel" />
           </div>
           <div class="item">
-            <img src="assets/other/swisshotel5.jpg" alt="swisshotel" />
+            <img src="static/assets/other/swisshotel5.jpg" alt="swisshotel" />
           </div>
           <div class="item">
-            <img src="assets/other/swisshotel6.jpg" alt="swisshotel" />
+            <img src="static/assets/other/swisshotel6.jpg" alt="swisshotel" />
           </div>
           <div class="item">
-            <img src="assets/other/swisshotel7.jpg" alt="swisshotel" />
+            <img src="static/assets/other/swisshotel7.jpg" alt="swisshotel" />
           </div>
         </div>
 
@@ -333,16 +333,16 @@
 
         <div class="owl-carousel carousel-theme" id="carouselEight">
           <div class="item">
-            <img src="assets/other/cc2.jpg" alt="swisshotel" />
+            <img src="static/assets/other/cc2.jpg" alt="swisshotel" />
           </div>
           <div class="item">
-            <img src="assets/other/cc1.jpg" alt="swisshotel" />
+            <img src="static/assets/other/cc1.jpg" alt="swisshotel" />
           </div>
           <div class="item">
-            <img src="assets/other/cc3.jpg" alt="swisshotel" />
+            <img src="static/assets/other/cc3.jpg" alt="swisshotel" />
           </div>
           <div class="item">
-            <img src="assets/other/cc4.jpg" alt="swisshotel" />
+            <img src="static/assets/other/cc4.jpg" alt="swisshotel" />
           </div>
         </div>
       </section>
@@ -433,87 +433,87 @@
         </div>
         <div class="owl-carousel owl-theme" id="carouselNine">
           <div class="item">
-            <img src="assets/icons/7.png" alt="icon" />
+            <img src="static/assets/icons/7.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/30.png" alt="icon" />
+            <img src="static/assets/icons/30.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/34.png" alt="icon" />
+            <img src="static/assets/icons/34.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/8.png" alt="icon" />
+            <img src="static/assets/icons/8.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/9.png" alt="icon" />
+            <img src="static/assets/icons/9.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/13.png" alt="icon" />
+            <img src="static/assets/icons/13.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/14.png" alt="icon" />
+            <img src="static/assets/icons/14.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/15.png" alt="icon" />
+            <img src="static/assets/icons/15.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/16.png" alt="icon" />
+            <img src="static/assets/icons/16.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/17.png" alt="icon" />
+            <img src="static/assets/icons/17.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/18.png" alt="icon" />
+            <img src="static/assets/icons/18.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/19.png" alt="icon" />
+            <img src="static/assets/icons/19.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/20.png" alt="icon" />
+            <img src="static/assets/icons/20.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/21.png" alt="icon" />
+            <img src="static/assets/icons/21.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/22.png" alt="icon" />
+            <img src="static/assets/icons/22.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/23.png" alt="icon" />
+            <img src="static/assets/icons/23.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/24.png" alt="icon" />
+            <img src="static/assets/icons/24.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/25.png" alt="icon" />
+            <img src="static/assets/icons/25.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/26.png" alt="icon" />
+            <img src="static/assets/icons/26.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/27.png" alt="icon" />
+            <img src="static/assets/icons/27.png" alt="icon" />
           </div>
 
           <div class="item">
-            <img src="assets/icons/30.png" alt="icon" />
+            <img src="static/assets/icons/30.png" alt="icon" />
           </div>
         </div>
       </section>
@@ -521,7 +521,7 @@
     <footer>
       <div class="footer__container">
         <div class="footer__container-1">
-          <div><img src="assets/logo/logo.png" alt="logo" /></div>
+          <div><img src="static/assets/logo/logo.png" alt="logo" /></div>
           <div>
             <div>
               Профессиональная <br />организация конференций<br />
@@ -530,12 +530,12 @@
             <div>Социальные сети</div>
             <div>
               <a href="#"
-                ><img src="assets/icons/youtube.png" alt="youtube"
+                ><img src="static/assets/icons/youtube.png" alt="youtube"
               /></a>
               <a href="#"
-                ><img src="assets/icons/telegram.png" alt="telegram"
+                ><img src="static/assets/icons/telegram.png" alt="telegram"
               /></a>
-              <a href="#"><img src="assets/icons/dzen.png" alt="yadzen" /></a>
+              <a href="#"><img src="static/assets/icons/dzen.png" alt="yadzen" /></a>
             </div>
             <div>Реквизиты компании</div>
             <div>ИП Лючина Татьяна Изосимовна</div>
@@ -597,14 +597,14 @@
         </div>
       </div>
     </footer>
-    <script src="owl/jquery-3.7.1.js"></script>
-    <script src="owl/owl.js"></script>
-    <script src="owl/owl.carousel.min.js"></script>
+    <script src="static/owl/jquery-3.7.1.js"></script>
+    <script src="static/owl/owl.js"></script>
+    <script src="static/owl/owl.carousel.min.js"></script>
     <script>
       $(document).ready(function () {
         $('.owl-carousel').owlCarousel();
       });
     </script>
-    <script src="js/company.js"></script>
+    <script src="static/js/company.js"></script>
   </body>
 </html>
