--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="owl/owl.carousel.min.css" />
-    <link rel="stylesheet" href="owl/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="static/owl/owl.carousel.min.css" />
+    <link rel="stylesheet" href="static/owl/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="static/css/style.css" />
     <title>Event Today</title>
   </head>
   <body>
     <header>
       <section class="main">
         <div class="main__logo">
-          <a href="index.html"><img src="assets/logo/logo.png" alt="logo" /></a>
+          <a href="index.html"><img src="static/assets/logo/logo.png" alt="logo" /></a>
         </div>
         <div class="main__links">
           <ul class="">
@@ -26,7 +26,7 @@
         <div class="main__reg">
           <button id="myBtn">Регистрация</button>
           <a href="registration.html"
-            ><img src="assets/icons/Vector.png" alt="pic"
+            ><img src="static/assets/icons/Vector.png" alt="pic"
           /></a>
         </div>
 
@@ -136,7 +136,7 @@
 
         <div class="main__calendar-container date1">
           <div class="main__calendar-container-img">
-            <img src="assets/other/pic3.jpg" alt="pic" />
+            <img src="static/assets/other/pic3.jpg" alt="pic" />
           </div>
           <div class="main__calendar-container-desc">
             <div class="main__calendar-container-desc-1">
@@ -163,7 +163,7 @@
 
         <div class="main__calendar-container date2">
           <div class="main__calendar-container-img">
-            <img src="assets/other/date2.jpg" alt="pic" />
+            <img src="static/assets/other/date2.jpg" alt="pic" />
           </div>
           <div class="main__calendar-container-desc">
             <div class="main__calendar-container-desc-1">
@@ -190,7 +190,7 @@
 
         <div class="main__calendar-container date3">
           <div class="main__calendar-container-img">
-            <img src="assets/other/date3.jpg" alt="pic" />
+            <img src="static/assets/other/date3.jpg" alt="pic" />
           </div>
           <div class="main__calendar-container-desc">
             <div class="main__calendar-container-desc-1">
@@ -216,7 +216,7 @@
 
         <div class="main__calendar-container date4">
           <div class="main__calendar-container-img">
-            <img src="assets/other/date4.jpg" alt="pic" />
+            <img src="static/assets/other/date4.jpg" alt="pic" />
           </div>
           <div class="main__calendar-container-desc">
             <div class="main__calendar-container-desc-1">
@@ -246,7 +246,7 @@
 
         <div class="main__calendar-container date5">
           <div class="main__calendar-container-img">
-            <img src="assets/other/date5.jpg" alt="pic" />
+            <img src="static/assets/other/date5.jpg" alt="pic" />
           </div>
           <div class="main__calendar-container-desc">
             <div class="main__calendar-container-desc-1">
@@ -272,7 +272,7 @@
 
         <div class="main__calendar-container date6">
           <div class="main__calendar-container-img">
-            <img src="assets/other/date6.jpg" alt="pic" />
+            <img src="static/assets/other/date6.jpg" alt="pic" />
           </div>
           <div class="main__calendar-container-desc">
             <div class="main__calendar-container-desc-1">
@@ -299,7 +299,7 @@
 
         <div class="main__calendar-container date7">
           <div class="main__calendar-container-img">
-            <img src="assets/other/date7.jpg" alt="pic" />
+            <img src="static/assets/other/date7.jpg" alt="pic" />
           </div>
           <div class="main__calendar-container-desc">
             <div class="main__calendar-container-desc-1">
@@ -329,7 +329,7 @@
 
         <div class="main__online-container">
           <div class="main__online-container-img">
-            <img src="assets/other/pic6.jpg" alt="pic" />
+            <img src="static/assets/other/pic6.jpg" alt="pic" />
           </div>
           <div class="main__online-container-desc">
             <div class="main__online-container-desc-1">
@@ -353,7 +353,7 @@
 
         <div class="main__online-container">
           <div class="main__online-container-img">
-            <img src="assets/other/pic8.jpg" alt="pic" />
+            <img src="static/assets/other/pic8.jpg" alt="pic" />
           </div>
           <div class="main__online-container-desc">
             <div class="main__online-container-desc-1">
@@ -377,7 +377,7 @@
 
         <div class="main__online-container">
           <div class="main__online-container-img">
-            <img src="assets/other/pic7.jpg" alt="pic" />
+            <img src="static/assets/other/pic7.jpg" alt="pic" />
           </div>
           <div class="main__online-container-desc">
             <div class="main__online-container-desc-1">
@@ -404,11 +404,11 @@
         <div class="owl-carousel owl-theme" id="carouselOne">
           <div class="owl-carousel-item">
             <div class="owl-carousel-item-title">
-              <img style="width: 100px" src="assets/team/team5.jpg" alt="pic" />
+              <img style="width: 100px" src="static/assets/team/team5.jpg" alt="pic" />
               <p>Сергей фокин,спикер</p>
               <img
                 style="width: 100px"
-                src="assets/icons/stars-group.png"
+                src="static/assets/icons/stars-group.png"
                 alt="stars"
               />
             </div>
@@ -425,11 +425,11 @@
           </div>
           <div class="owl-carousel-item">
             <div class="owl-carousel-item-title">
-              <img style="width: 100px" src="assets/team/team2.jpg" alt="pic" />
+              <img style="width: 100px" src="static/assets/team/team2.jpg" alt="pic" />
               <p>Андрей Иванов,спикер</p>
               <img
                 style="width: 100px"
-                src="assets/icons/stars-group.png"
+                src="static/assets/icons/stars-group.png"
                 alt="stars"
               />
             </div>
@@ -446,11 +446,11 @@
           </div>
           <div class="owl-carousel-item">
             <div class="owl-carousel-item-title">
-              <img style="width: 100px" src="assets/team/team5.jpg" alt="pic" />
+              <img style="width: 100px" src="static/assets/team/team5.jpg" alt="pic" />
               <p>Сергей фокин,спикер</p>
               <img
                 style="width: 100px"
-                src="assets/icons/stars-group.png"
+                src="static/assets/icons/stars-group.png"
                 alt="stars"
               />
             </div>
@@ -467,11 +467,11 @@
           </div>
           <div class="owl-carousel-item">
             <div class="owl-carousel-item-title">
-              <img style="width: 100px" src="assets/team/team2.jpg" alt="pic" />
+              <img style="width: 100px" src="static/assets/team/team2.jpg" alt="pic" />
               <p>Андрей Иванов,спикер</p>
               <img
                 style="width: 100px"
-                src="assets/icons/stars-group.png"
+                src="static/assets/icons/stars-group.png"
                 alt="stars"
               />
             </div>
@@ -488,11 +488,11 @@
           </div>
           <div class="owl-carousel-item">
             <div class="owl-carousel-item-title">
-              <img style="width: 100px" src="assets/team/team5.jpg" alt="pic" />
+              <img style="width: 100px" src="static/assets/team/team5.jpg" alt="pic" />
               <p>Сергей фокин,спикер</p>
               <img
                 style="width: 100px"
-                src="assets/icons/stars-group.png"
+                src="static/assets/icons/stars-group.png"
                 alt="stars"
               />
             </div>
@@ -516,103 +516,103 @@
         </div>
         <div class="owl-carousel owl-theme" id="carouselTwo">
           <div class="item">
-            <img src="assets/slider/10.jpg" alt="photorep" />
+            <img src="static/assets/slider/10.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/10.webp" alt="photorep" />
+            <img src="static/assets/slider/10.webp" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/11.webp" alt="photorep" />
+            <img src="static/assets/slider/11.webp" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/12.jpg" alt="photorep" />
+            <img src="static/assets/slider/12.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/13.jpg" alt="photorep" />
+            <img src="static/assets/slider/13.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/14.webp" alt="photorep" />
+            <img src="static/assets/slider/14.webp" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/15.jpg" alt="photorep" />
+            <img src="static/assets/slider/15.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/16.webp" alt="photorep" />
+            <img src="static/assets/slider/16.webp" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/17.jpg" alt="photorep" />
+            <img src="static/assets/slider/17.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/18.webp" alt="photorep" />
+            <img src="static/assets/slider/18.webp" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/19.webp" alt="photorep" />
+            <img src="static/assets/slider/19.webp" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/2.jpg" alt="photorep" />
+            <img src="static/assets/slider/2.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/20.jpg" alt="photorep" />
+            <img src="static/assets/slider/20.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/21.jpg" alt="photorep" />
+            <img src="static/assets/slider/21.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/21.webp" alt="photorep" />
+            <img src="static/assets/slider/21.webp" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/22.webp" alt="photorep" />
+            <img src="static/assets/slider/22.webp" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/23.webp" alt="photorep" />
+            <img src="static/assets/slider/23.webp" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/24.jpg" alt="photorep" />
+            <img src="static/assets/slider/24.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/25.jpg" alt="photorep" />
+            <img src="static/assets/slider/25.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/26.webp" alt="photorep" />
+            <img src="static/assets/slider/26.webp" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/27.webp" alt="photorep" />
+            <img src="static/assets/slider/27.webp" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/28.jpg" alt="photorep" />
+            <img src="static/assets/slider/28.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/3.jpg" alt="photorep" />
+            <img src="static/assets/slider/3.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/4.webp" alt="photorep" />
+            <img src="static/assets/slider/4.webp" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/5.jpg" alt="photorep" />
+            <img src="static/assets/slider/5.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/6.jpg" alt="photorep" />
+            <img src="static/assets/slider/6.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/7.jpg" alt="photorep" />
+            <img src="static/assets/slider/7.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/8.jpg" alt="photorep" />
+            <img src="static/assets/slider/8.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/9.jpg" alt="photorep" />
+            <img src="static/assets/slider/9.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/image-5.jpg" alt="photorep" />
+            <img src="static/assets/slider/image-5.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/image-6.jpg" alt="photorep" />
+            <img src="static/assets/slider/image-6.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/IMG_7894.jpg" alt="photorep" />
+            <img src="static/assets/slider/IMG_7894.jpg" alt="photorep" />
           </div>
           <div class="item">
-            <img src="assets/slider/photo.webp" alt="photorep" />
+            <img src="static/assets/slider/photo.webp" alt="photorep" />
           </div>
         </div>
       </section>
@@ -657,7 +657,7 @@
     <footer>
       <div class="footer__container">
         <div class="footer__container-1">
-          <div><img src="assets/logo/logo.png" alt="logo" /></div>
+          <div><img src="static/assets/logo/logo.png" alt="logo" /></div>
           <div>
             <div>
               Профессиональная <br />организация конференций<br />
@@ -666,12 +666,12 @@
             <div>Социальные сети</div>
             <div>
               <a href="#"
-                ><img src="assets/icons/youtube.png" alt="youtube"
+                ><img src="static/assets/icons/youtube.png" alt="youtube"
               /></a>
               <a href="#"
-                ><img src="assets/icons/telegram.png" alt="telegram"
+                ><img src="static/assets/icons/telegram.png" alt="telegram"
               /></a>
-              <a href="#"><img src="assets/icons/dzen.png" alt="yadzen" /></a>
+              <a href="#"><img src="static/assets/icons/dzen.png" alt="yadzen" /></a>
             </div>
             <div>Реквизиты компании</div>
             <div>ИП Лючина Татьяна Изосимовна</div>
@@ -733,15 +733,15 @@
         </div>
       </div>
     </footer>
-    <script src="owl/jquery-3.7.1.js"></script>
-    <script src="owl/owl.js"></script>
-    <script src="owl/owl.carousel.min.js"></script>
+    <script src="static/owl/jquery-3.7.1.js"></script>
+    <script src="static/owl/owl.js"></script>
+    <script src="static/owl/owl.carousel.min.js"></script>
     <script>
       $(document).ready(function () {
         $('.owl-carousel').owlCarousel();
       });
     </script>
-    <script src="js/index.js"></script>
+    <script src="static/js/index.js"></script>
     
     <script>
        console.log('Скрипт загружен');
