--- a/partner.html
+++ b/partner.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="static/css/style.css" />
     <title>Event Today</title>
   </head>
   <body>
     <header>
       <section class="main">
         <div class="main__logo">
-          <a href="index.html"><img src="assets/logo/logo.png" alt="logo" /></a>
+          <a href="index.html"><img src="static/assets/logo/logo.png" alt="logo" /></a>
         </div>
         <div class="main__links">
           <ul class="">
@@ -24,7 +24,7 @@
         <div class="main__reg">
           <button id="myBtn">Регистрация</button>
           <a href="registration.html"
-            ><img src="assets/icons/Vector.png" alt="pic"
+            ><img src="static/assets/icons/Vector.png" alt="pic"
           /></a>
         </div>
 
@@ -212,7 +212,7 @@
           </div>
           <div class="partner__sponsor-container-item">
             <div class="partner__sponsor-container-item-img">
-              <img src="assets/icons/10.png" alt="icon" />
+              <img src="static/assets/icons/10.png" alt="icon" />
             </div>
             <div class="partner__sponsor-container-item-text">
               <h3>Интеграция бренда</h3>
@@ -325,7 +325,7 @@
           </div>
           <div class="partner__sponsor-container-item">
             <div class="partner__sponsor-container-item-img">
-              <img src="assets/icons/11.png" alt="icon" />
+              <img src="static/assets/icons/11.png" alt="icon" />
             </div>
             <div class="partner__sponsor-container-item-text">
               <h3>Презентация компании</h3>
@@ -399,7 +399,7 @@
           </div>
           <div class="partner__sponsor-container-item">
             <div class="partner__sponsor-container-item-img">
-              <img src="assets/icons/12.png" alt="icon" />
+              <img src="static/assets/icons/12.png" alt="icon" />
             </div>
             <div class="partner__sponsor-container-item-text">
               <h3>Эксклюзивное позиционирование</h3>
@@ -555,7 +555,7 @@
     <footer>
         <div class="footer__container">
           <div class="footer__container-1">
-            <div><img src="assets/logo/logo.png" alt="logo" /></div>
+            <div><img src="static/assets/logo/logo.png" alt="logo" /></div>
             <div>
               <div>
                 Профессиональная <br />организация конференций<br />
@@ -564,12 +564,12 @@
               <div>Социальные сети</div>
               <div>
                 <a href="#"
-                  ><img src="assets/icons/youtube.png" alt="youtube"
+                  ><img src="static/assets/icons/youtube.png" alt="youtube"
                 /></a>
                 <a href="#"
-                  ><img src="assets/icons/telegram.png" alt="telegram"
+                  ><img src="static/assets/icons/telegram.png" alt="telegram"
                 /></a>
-                <a href="#"><img src="assets/icons/dzen.png" alt="yadzen" /></a>
+                <a href="#"><img src="static/assets/icons/dzen.png" alt="yadzen" /></a>
               </div>
               <div>Реквизиты компании</div>
               <div>ИП Лючина Татьяна Изосимовна</div>
@@ -631,6 +631,6 @@
           </div>
         </div>
       </footer>
-    <script src="js/partner.js"></script>
+    <script src="static/js/partner.js"></script>
   </body>
 </html>
