--- a/tickets.html
+++ b/tickets.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="static/css/style.css" />
     <title>Event Today</title>
   </head>
   <body>
     <header>
       <section class="main">
         <div class="main__logo">
-          <a href="index.html"><img src="assets/logo/logo.png" alt="logo" /></a>
+          <a href="index.html"><img src="static/assets/logo/logo.png" alt="logo" /></a>
         </div>
         <div class="main__links">
           <ul class="">
@@ -24,7 +24,7 @@
         <div class="main__reg">
           <button id="myBtn">Регистрация</button>
           <a href="registration.html"
-            ><img src="assets/icons/Vector.png" alt="pic"
+            ><img src="static/assets/icons/Vector.png" alt="pic"
           /></a>
         </div>
 
@@ -95,7 +95,7 @@
 
           <div class="tickets__container-item">
             <div class="tickets__container-item-img">
-              <img src="assets/other/tickets1.jpg" alt="pic" />
+              <img src="static/assets/other/tickets1.jpg" alt="pic" />
             </div>
 
             <div class="tickets__container-item-text">
@@ -122,7 +122,7 @@
         <div class="tickets__container">
           <div class="tickets__container-item">
             <div class="tickets__container-item-img">
-              <img src="assets/other/tickets2.jpg" alt="pic" />
+              <img src="static/assets/other/tickets2.jpg" alt="pic" />
             </div>
 
             <div class="tickets__container-item-text">
@@ -147,7 +147,7 @@
         <div class="tickets__container">
           <div class="tickets__container-item">
             <div class="tickets__container-item-img">
-              <img src="assets/other/tickets3.jpg" alt="pic" />
+              <img src="static/assets/other/tickets3.jpg" alt="pic" />
             </div>
 
             <div class="tickets__container-item-text">
@@ -173,7 +173,7 @@
 
           <div class="tickets__container-item">
             <div class="tickets__container-item-img">
-              <img src="assets/other/tickets4.jpg" alt="pic" />
+              <img src="static/assets/other/tickets4.jpg" alt="pic" />
             </div>
 
             <div class="tickets__container-item-text">
@@ -195,7 +195,7 @@
         <div class="tickets__container">
           <div class="tickets__container-item">
             <div class="tickets__container-item-img">
-              <img src="assets/other/tickets5.jpg" alt="pic" />
+              <img src="static/assets/other/tickets5.jpg" alt="pic" />
             </div>
 
             <div class="tickets__container-item-text">
@@ -217,7 +217,7 @@
         <div class="tickets__container">
           <div class="tickets__container-item">
             <div class="tickets__container-item-img">
-              <img src="assets/other/tickets6.jpg" alt="pic" />
+              <img src="static/assets/other/tickets6.jpg" alt="pic" />
             </div>
 
             <div class="tickets__container-item-text">
@@ -244,14 +244,14 @@
 
         <div class="tickets__support-container-1">
           <div class="tickets__support-container-1-item">
-            <img src="assets/icons/34.png" alt="icon" />
+            <img src="static/assets/icons/34.png" alt="icon" />
             <p>
               Интернет-издание ICT-Online.ru посвящено рынку информационных
               технологий и телекоммуникаций.
             </p>
           </div>
           <div class="tickets__support-container-1-item">
-            <img src="assets/icons/36.png" alt="icon" />
+            <img src="static/assets/icons/36.png" alt="icon" />
             <p>
               Мы собираем «под одной крышей» все значимые события: от крупных
               международных конгрессов до закрытых пресс-конференций.
@@ -260,25 +260,25 @@
         </div>
 
         <div class="tickets__support-container-2">
-          <img src="assets/icons/38.png" alt="icon" />
-          <img src="assets/icons/30.png" alt="icon" />
-          <img src="assets/icons/13.png" alt="icon" />
-          <img src="assets/icons/14.png" alt="icon" />
-          <img src="assets/icons/15.png" alt="icon" />
-          <img src="assets/icons/27.png" alt="icon" />
+          <img src="static/assets/icons/38.png" alt="icon" />
+          <img src="static/assets/icons/30.png" alt="icon" />
+          <img src="static/assets/icons/13.png" alt="icon" />
+          <img src="static/assets/icons/14.png" alt="icon" />
+          <img src="static/assets/icons/15.png" alt="icon" />
+          <img src="static/assets/icons/27.png" alt="icon" />
         </div>
 
         <div class="tickets__support-container-3">
-          <img src="assets/icons/26.png" alt="icon" />
-          <img src="assets/icons/18.png" alt="icon" />
-          <img src="assets/icons/19.png" alt="icon" />
+          <img src="static/assets/icons/26.png" alt="icon" />
+          <img src="static/assets/icons/18.png" alt="icon" />
+          <img src="static/assets/icons/19.png" alt="icon" />
         </div>
       </section>
     </main>
     <footer>
       <div class="footer__container">
         <div class="footer__container-1">
-          <div><img src="assets/logo/logo.png" alt="logo" /></div>
+          <div><img src="static/assets/logo/logo.png" alt="logo" /></div>
           <div>
             <div>
               Профессиональная <br />организация конференций<br />
@@ -287,12 +287,12 @@
             <div>Социальные сети</div>
             <div>
               <a href="#"
-                ><img src="assets/icons/youtube.png" alt="youtube"
+                ><img src="static/assets/icons/youtube.png" alt="youtube"
               /></a>
               <a href="#"
-                ><img src="assets/icons/telegram.png" alt="telegram"
+                ><img src="static/assets/icons/telegram.png" alt="telegram"
               /></a>
-              <a href="#"><img src="assets/icons/dzen.png" alt="yadzen" /></a>
+              <a href="#"><img src="static/assets/icons/dzen.png" alt="yadzen" /></a>
             </div>
             <div>Реквизиты компании</div>
             <div>ИП Лючина Татьяна Изосимовна</div>
@@ -354,6 +354,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/tickets.js"></script>
+    <script src="static/js/tickets.js"></script>
   </body>
 </html>
