--- a/account.html
+++ b/account.html
@@ -90,9 +90,9 @@
           <div class="profile__title-person">
             <div class="profile__title-person-name">
               <h4>
-                Иванов Иван Иванович
-                <p>email: ivanov@mail.ru</p>
-                <p>8 (999) 999-53-45</p>
+                Абдурахманов Денис 
+                <p>email: a.327@yandex.ru</p>
+                <p>+79611280950</p>
               </h4>
             </div>
             <div class="profile__title-person-avatar">
